# CloudCat

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  cloudcat.wasm  gl.js  index.html  miniquad.js
.cargo/: config.toml
.github/workflows/: deploy-web.yml  release.yml  rust.yml
favicons/: site.webmanifest
src/: animation.rs  entities.rs  highscore.rs  main.rs  settings.rs
src/entities/: cat.rs  cloud.rs  floor.rs  umbrella.rs
web/: cloudcat.wasm  index.html
