[package]
name = "CloudCat"
version = "1.0.3"
edition = "2024"

[[bin]]
name = "cloudcat"
path = "src/main.rs"

[dependencies]
macroquad = "0.4.14"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.9.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"
