[package]
name = "CloudCat"
version = "1.2.2"
edition = "2024"

[[bin]]
name = "cloudcat"
path = "src/main.rs"

[dependencies]
macroquad = "0.4.14"
quad-storage = "0.1.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.9.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
